# Development-methodology

./: README.md
pythonProject1/numbers/: README.md  pyproject.toml
pythonProject1/numbers/src/numbers/: main.py
src/numbers/: __init__.py  game1  game2.py  game_engine.py
task 1/: Задание 12 1.docx
